--- a/styles.css
+++ b/styles.css
@@ -122,3 +122,9 @@ body{
             font-size: 16px;
         }
         }
+
+        .contacto{
+            text-decoration: none;
+            text-align: center;
+            
+        }
